Java 17 & bug fixes (#53)
[AMQP] Fixed Hearbeat Message Type
[ALL] Added repeatable message on replaying
[ALL] Added timestamp on indexes
[ALL] Multiple APIs allowed for Plugins
[ALL] API allowed for protocols
[ALL] Added JTE template angine to create dynamic HTMX pages
[ALL] Added possibility for multiple Static Web Pages on APIs